# cryptellation

./: .air.toml  .credentials.example.env  .dockerignore  .example.env  .gitignore  .gitmodules  .golangci.yml  .services.env  404.html  Makefile  README.md  TODO.md  blog.html  dagger.json  docker-compose.yml  donate.html  go.mod  go.sum  go.work  go.work.example  go.work.sample  go.work.sum  index.html  package-lock.json  sitemap.xml
.circleci/: config.yml
.github/: FUNDING.yml
api/: backtests.go  callbacks.go  candlesticks.go  exchanges.go  forwardtests.go  indicators.go  service.go  ticks.go
blog/: archive.html  hello-world.html  rss.xml
clients/python/gateway/: README.md  openapi.config.yaml  pyproject.toml  requirements.dev.txt  requirements.txt
clients/python/gateway/cryptellation_gateway/: __init__.py
clients/python/gateway/cryptellation_gateway/api/default/: get_candlesticks.py  get_info.py
clients/python/gateway/cryptellation_gateway/models/: __init__.py  candlestick.py  system_information.py
clients/python/gateway/requirements/: dev.txt
cmd/: go.mod  go.sum
configs/: candlesticks.sql  exchanges.sql  indicators.sql  tables.sql
deployments/: Makefile  docker-compose.yaml
docs/: 404.html  CNAME  blog.html  contributing.html  donate.html  index.html  overview.html  sitemap.xml
internal/: dagger.json  go.mod  go.sum
pkg/: Makefile  dagger.json  go.mod  go.sum
scripts/: check-generation.sh  init-databases.sql  wait-sqldb.sh
test/: Makefile  backtests_run_test.go  backtests_test.go  candlesticks_test.go  exchanges_test.go  init_test.go  (+5 more)
(+2737 files in other folders)
