[tool.poetry]
name = "cryptellation_gateway"
version = "1.10.0"
description = "A client library for accessing Cryptellation API Gateway"
authors = []
readme = "README.md"
packages = [
    {include = "cryptellation_gateway"},
]
include = ["CHANGELOG.md", "cryptellation_gateway/py.typed"]


[tool.poetry.dependencies]
python = "^3.9"
httpx = ">=0.20.0,<0.29.0"
attrs = ">=22.2.0"
python-dateutil = "^2.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["F", "I", "UP"]
